--- a/marianeindex.html
+++ b/marianeindex.html
@@ -44,7 +44,7 @@
         $130,00, além disso quando o cliente alcança até 7 compras damos um cupom de desconto para uma
         melhor experiência para nossos clientes. Além de termos o melhor preço, a cada compra nossos clientes
         ganham brindes. Contando também com um bom café da manhã, pensanso sempre no conforto para nossos
-        clientes.
+        clientes..
      </p>
    
 
