--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </p>
   
    <p>
-      PERFUME: em nossa loja temos grandes variedades de perfumes tanto feminino quanto masculino e
+      PERFUME: em nossa loja temos grandes variedades de perfumes tanto feminino quanto masculino e,,
       até mesmo uma linha infantil, tendo como a linha Sophie e Botica do coração.
         Temos perfumes, colônias, body splash e desodorante colônia. Sendo assim as linhas mais
         vendidas da Natura é (Ília, Una, Essencial e Kaiak), já a linha da Oboticário temos (Lilly,Elizee,floratta,malbeck, 
