--- a/marianeindex.html
+++ b/marianeindex.html
@@ -35,7 +35,12 @@
         vendidas da Natura é (Ília, Una, Essencial e Kaiak), já a linha da Oboticário temos (Lilly,Elizee,floratta,malbeck, 
         glamour, egeo, zaad e nativa spaa), na linha da Eudora temos, (instance e diva).Sendo assim
         essas linhas e essas marcas brasileiras são as mais vendidas e com um preço mais acessível.
-   </p>
+        Em nossa loja temos também uma marca de perfumes importados sendo ela a de Paco Rabenne, tendo
+       perfumes femininos e masculinos, snedo assim os perfumes mais vendidos são
+       (invictus, phantom, lady million, pure xs, e olympea).
+    </p>
+   
+   
   
     
   
@@ -44,7 +49,7 @@
         $130,00, além disso quando o cliente alcança até 7 compras damos um cupom de desconto para uma
         melhor experiência para nossos clientes. Além de termos o melhor preço, a cada compra nossos clientes
         ganham brindes. Contando também com um bom café da manhã, pensanso sempre no conforto para nossos
-        clientes..
+        clientes.
      </p>
    
 
